# copa_test_provisorio

./: .gitignore  CMakeLists.txt  common.h  consolidate.results.cpp  consolidate.results.h  image.server.cpp  image.server.h  inspection.cpp  inspection.h  main.cpp  main.cutter.detection.cpp  main.cutter.detection.h  main.cutter.detection.txt  manager.inspection.cpp  manager.inspection.h  test.http
.devcontainer/: Dockerfile  devcontainer.json
conf/: parms.json  result.json  schema copy.json  schema.json  schema_115.json  teste.json
events/image_abs/: 7.json  9.json
events/image_border/: 12.json
events/image_original/: 1.json  5.json
py/: consolidate_results.py
